orders/base/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      konghq.com/plugins: orders-basic-auth
      konghq.com/strip-path: "false"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"konghq.com/plugins":"orders-basic-auth","konghq.com/strip-path":"false"},"name":"spce-orders","namespace":"orders"},"spec":{"ingressClassName":"kong","rules":[{"host":"api.abu7midan.com","http":{"paths":[{"backend":{"service":{"name":"spce-orders","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-02-13T13:20:25Z"
    generation: 4
    name: spce-orders
    namespace: orders
    resourceVersion: "7687077"
    uid: f6850ad3-de8c-44a4-9ba8-8e0d7afe0266
  spec:
    ingressClassName: kong
    rules:
    - host: api.abu7midan.com
      http:
        paths:
        - backend:
            service:
              name: spce-orders
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.105.153.74
kind: List
metadata:
  resourceVersion: ""
