orders/base/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: orders:/Service:orders/spce-orders
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"orders:/Service:orders/spce-orders"},"creationTimestamp":"2026-02-27T08:04:47Z","name":"spce-orders","namespace":"orders","resourceVersion":"6190752","uid":"8009693e-7b58-49d7-b93c-13e1a8f5708f"},"spec":{"clusterIP":"10.106.158.112","clusterIPs":["10.106.158.112"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"name":"http","port":80,"protocol [...]
    creationTimestamp: "2026-02-27T08:04:47Z"
    name: spce-orders
    namespace: orders
    resourceVersion: "6201978"
    uid: 8009693e-7b58-49d7-b93c-13e1a8f5708f
  spec:
    clusterIP: 10.106.158.112
    clusterIPs:
    - 10.106.158.112
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: spce-orders
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
